# wake-on-lan-api-db

./: .env  .gitignore  Cargo.toml  README.md  install_diesel_cli.sh
migrations/2021-04-24-183417_create_hostname_mac_address/: down.sql  up.sql
src/: main.rs
src/db/: models.rs
