[package]
name = "wake-on-lan-api-db"
version = "0.1.0"
authors = ["dependencyInversion <wennmann@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.6", features = ["sqlite"] }
dotenv = "0.15"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"